added HTML landmarks

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
+  <header>
 
-  Preview
+  </header>
+  <main>
+    Perfume
 
   Gabrielle Essence Eau De Parfum
 
@@ -22,6 +25,7 @@
   $169.99
 
   Add to Cart
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
