--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
-  <header>
+  <div class="container">
+    <header>
+      <img src="./images/image-product-mobile.jpg" alt="mobie pic">
+    </header>
+    <main>
+      <p class="sub-title">Perfume</p>
 
-  </header>
-  <main>
-    Perfume
+      <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  Gabrielle Essence Eau De Parfum
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+      <div class="price">
+        <p class="sale-price">$149.99</p>
+        <p class="original-price">$169.99</p>
+      </div>
 
-  $149.99
-  $169.99
-
-  Add to Cart
-  </main>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://twitter.com/adoraflowerbeee">Adora</a>.
+      <button>Add to Cart</button>
+    </main>
   </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://twitter.com/adoraflowerbeee">Adora</a>.
+    </div>
+  </footer>
 </body>
 </html>
