--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <h1>Gabrielle Essence Eau De Parfum</h1>
 
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+      <p class="content">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
       <div class="price">
         <p class="sale-price">$149.99</p>
