--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <p class="content">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
       <div class="price">
-        <p class="sale-price">$149.99</p>
-        <p class="original-price">$169.99</p>
+        <p><span class="sale-price">$149.99</span><span class="original-price">$169.99</span></p>
       </div>
 
       <button>Add to Cart</button>
