--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p><span class="sale-price">$149.99</span><span class="original-price">$169.99</span></p>
       </div>
 
-      <button>Add to Cart</button>
+      <button><img src="./images/icon-cart.svg" alt="shopping cart" class="shopping-cart">Add to Cart</button>
     </main>
   </div>
   <footer>
