added media query for big screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <div class="container">
     <header>
-      <img src="./images/image-product-mobile.jpg" alt="mobie pic">
+      <!-- <img src="./images/image-product-mobile.jpg" alt="mobie pic"> -->
+      <div class="image-placeholder"></div>
     </header>
     <main>
       <p class="sub-title">Perfume</p>
