--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <p class="content">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
 
       <div class="price">
-        <p><span class="sale-price">$149.99</span><span class="original-price">$169.99</span></p>
+        <p class="sale-price">$149.99</p>
+        <p class="original-price">$169.99</p>
       </div>
 
       <button><img src="./images/icon-cart.svg" alt="shopping cart" class="shopping-cart">Add to Cart</button>
